# server/models/__init__.py
@@ -3,10 +3,11 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from server.models.inline_response200 import InlineResponse200
-from server.models.inline_response2001 import InlineResponse2001
-from server.models.inline_response2002 import InlineResponse2002
+from server.models.token import Token
+from server.models.session_status import SessionStatus
+from server.models.operations_status import OperationStatus
 from server.models.operation import Operation
 from server.models.operations import Operations
 from server.models.point import Point
 from server.models.status import Status
+from server.models.environment import Environment
