# server/models/operations_status.py
@@ -10,20 +10,20 @@ from server.models.point import Point  # noqa: F401,E501
 from server import util
 
 
-class InlineResponse2002(Model):
+class OperationStatus(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, number_of_movements: int=None, duration: int=None, position: Point=None):  # noqa: E501
-        """InlineResponse2002 - a model defined in Swagger
+        """OperationStatus - a model defined in Swagger
 
-        :param number_of_movements: The number_of_movements of this InlineResponse2002.  # noqa: E501
+        :param number_of_movements: The number_of_movements of this OperationStatus.  # noqa: E501
         :type number_of_movements: int
-        :param duration: The duration of this InlineResponse2002.  # noqa: E501
+        :param duration: The duration of this OperationStatus.  # noqa: E501
         :type duration: int
-        :param position: The position of this InlineResponse2002.  # noqa: E501
+        :param position: The position of this OperationStatus.  # noqa: E501
         :type position: Point
         """
         self.swagger_types = {
@@ -43,32 +43,32 @@ class InlineResponse2002(Model):
         self._position = position
 
     @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse2002':
+    def from_dict(cls, dikt) -> 'OperationStatus':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The inline_response_200_2 of this InlineResponse2002.  # noqa: E501
-        :rtype: InlineResponse2002
+        :return: The inline_response_200_2 of this OperationStatus.  # noqa: E501
+        :rtype: OperationStatus
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def number_of_movements(self) -> int:
-        """Gets the number_of_movements of this InlineResponse2002.
+        """Gets the number_of_movements of this OperationStatus.
 
 
-        :return: The number_of_movements of this InlineResponse2002.
+        :return: The number_of_movements of this OperationStatus.
         :rtype: int
         """
         return self._number_of_movements
 
     @number_of_movements.setter
     def number_of_movements(self, number_of_movements: int):
-        """Sets the number_of_movements of this InlineResponse2002.
+        """Sets the number_of_movements of this OperationStatus.
 
 
-        :param number_of_movements: The number_of_movements of this InlineResponse2002.
+        :param number_of_movements: The number_of_movements of this OperationStatus.
         :type number_of_movements: int
         """
 
@@ -76,20 +76,20 @@ class InlineResponse2002(Model):
 
     @property
     def duration(self) -> int:
-        """Gets the duration of this InlineResponse2002.
+        """Gets the duration of this OperationStatus.
 
 
-        :return: The duration of this InlineResponse2002.
+        :return: The duration of this OperationStatus.
         :rtype: int
         """
         return self._duration
 
     @duration.setter
     def duration(self, duration: int):
-        """Sets the duration of this InlineResponse2002.
+        """Sets the duration of this OperationStatus.
 
 
-        :param duration: The duration of this InlineResponse2002.
+        :param duration: The duration of this OperationStatus.
         :type duration: int
         """
 
@@ -97,20 +97,20 @@ class InlineResponse2002(Model):
 
     @property
     def position(self) -> Point:
-        """Gets the position of this InlineResponse2002.
+        """Gets the position of this OperationStatus.
 
 
-        :return: The position of this InlineResponse2002.
+        :return: The position of this OperationStatus.
         :rtype: Point
         """
         return self._position
 
     @position.setter
     def position(self, position: Point):
-        """Sets the position of this InlineResponse2002.
+        """Sets the position of this OperationStatus.
 
 
-        :param position: The position of this InlineResponse2002.
+        :param position: The position of this OperationStatus.
         :type position: Point
         """
 
