# server/models/session_status.py
@@ -9,20 +9,20 @@ from server.models.base_model_ import Model
 from server import util
 
 
-class InlineResponse2001(Model):
+class SessionStatus(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, checked_out: bool=None, session_duration: int=None, number_of_operations: int=None):  # noqa: E501
-        """InlineResponse2001 - a model defined in Swagger
+        """SessionStatus - a model defined in Swagger
 
-        :param checked_out: The checked_out of this InlineResponse2001.  # noqa: E501
+        :param checked_out: The checked_out of this SessionStatus.  # noqa: E501
         :type checked_out: bool
-        :param session_duration: The session_duration of this InlineResponse2001.  # noqa: E501
+        :param session_duration: The session_duration of this SessionStatus.  # noqa: E501
         :type session_duration: int
-        :param number_of_operations: The number_of_operations of this InlineResponse2001.  # noqa: E501
+        :param number_of_operations: The number_of_operations of this SessionStatus.  # noqa: E501
         :type number_of_operations: int
         """
         self.swagger_types = {
@@ -42,32 +42,32 @@ class InlineResponse2001(Model):
         self._number_of_operations = number_of_operations
 
     @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse2001':
+    def from_dict(cls, dikt) -> 'SessionStatus':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The inline_response_200_1 of this InlineResponse2001.  # noqa: E501
-        :rtype: InlineResponse2001
+        :return: The SessionStatus of this SessionStatus.  # noqa: E501
+        :rtype: SessionStatus
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def checked_out(self) -> bool:
-        """Gets the checked_out of this InlineResponse2001.
+        """Gets the checked_out of this SessionStatus.
 
 
-        :return: The checked_out of this InlineResponse2001.
+        :return: The checked_out of this SessionStatus.
         :rtype: bool
         """
         return self._checked_out
 
     @checked_out.setter
     def checked_out(self, checked_out: bool):
-        """Sets the checked_out of this InlineResponse2001.
+        """Sets the checked_out of this SessionStatus.
 
 
-        :param checked_out: The checked_out of this InlineResponse2001.
+        :param checked_out: The checked_out of this SessionStatus.
         :type checked_out: bool
         """
 
@@ -75,22 +75,22 @@ class InlineResponse2001(Model):
 
     @property
     def session_duration(self) -> int:
-        """Gets the session_duration of this InlineResponse2001.
+        """Gets the session_duration of this SessionStatus.
 
         The session duration in seconds  # noqa: E501
 
-        :return: The session_duration of this InlineResponse2001.
+        :return: The session_duration of this SessionStatus.
         :rtype: int
         """
         return self._session_duration
 
     @session_duration.setter
     def session_duration(self, session_duration: int):
-        """Sets the session_duration of this InlineResponse2001.
+        """Sets the session_duration of this SessionStatus.
 
         The session duration in seconds  # noqa: E501
 
-        :param session_duration: The session_duration of this InlineResponse2001.
+        :param session_duration: The session_duration of this SessionStatus.
         :type session_duration: int
         """
 
@@ -98,22 +98,22 @@ class InlineResponse2001(Model):
 
     @property
     def number_of_operations(self) -> int:
-        """Gets the number_of_operations of this InlineResponse2001.
+        """Gets the number_of_operations of this SessionStatus.
 
         The number of arm movements performed during the session  # noqa: E501
 
-        :return: The number_of_operations of this InlineResponse2001.
+        :return: The number_of_operations of this SessionStatus.
         :rtype: int
         """
         return self._number_of_operations
 
     @number_of_operations.setter
     def number_of_operations(self, number_of_operations: int):
-        """Sets the number_of_operations of this InlineResponse2001.
+        """Sets the number_of_operations of this SessionStatus.
 
         The number of arm movements performed during the session  # noqa: E501
 
-        :param number_of_operations: The number_of_operations of this InlineResponse2001.
+        :param number_of_operations: The number_of_operations of this SessionStatus.
         :type number_of_operations: int
         """
 
