# server/models/token.py
@@ -9,16 +9,16 @@ from server.models.base_model_ import Model
 from server import util
 
 
-class InlineResponse200(Model):
+class Token(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, token: str=None):  # noqa: E501
-        """InlineResponse200 - a model defined in Swagger
+        """Token - a model defined in Swagger
 
-        :param token: The token of this InlineResponse200.  # noqa: E501
+        :param token: The token of this Token.  # noqa: E501
         :type token: str
         """
         self.swagger_types = {
@@ -32,34 +32,34 @@ class InlineResponse200(Model):
         self._token = token
 
     @classmethod
-    def from_dict(cls, dikt) -> 'InlineResponse200':
+    def from_dict(cls, dikt) -> 'Token':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The inline_response_200 of this InlineResponse200.  # noqa: E501
-        :rtype: InlineResponse200
+        :return: The Token of this Token.  # noqa: E501
+        :rtype: Token
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def token(self) -> str:
-        """Gets the token of this InlineResponse200.
+        """Gets the token of this Token.
 
         Token to use for any operation in the session  # noqa: E501
 
-        :return: The token of this InlineResponse200.
+        :return: The token of this Token.
         :rtype: str
         """
         return self._token
 
     @token.setter
     def token(self, token: str):
-        """Sets the token of this InlineResponse200.
+        """Sets the token of this Token.
 
         Token to use for any operation in the session  # noqa: E501
 
-        :param token: The token of this InlineResponse200.
+        :param token: The token of this Token.
         :type token: str
         """
 
